# statuschecker

./: .flake8  .gitignore  BUILD.rst  COPYRIGHT.txt  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  robotstatuschecker.py  setup.py  tasks.py
.github/workflows/: push.yaml
doc/: statuschecker.html
docs/releasenotes/: robotstatuschecker-1.5.0.rst  robotstatuschecker-1.5.1.rst  robotstatuschecker-2.0.0.rst  robotstatuschecker-2.0.1.rst  robotstatuschecker-2.0.2.rst  robotstatuschecker-2.0.3.rst  robotstatuschecker-2.1.0.rst  robotstatuschecker-2.2.0.rst  robotstatuschecker-3.0.0.rst  robotstatuschecker-3.0.1.rst  robotstatuschecker-4.0.0.rst  robotstatuschecker-4.1.0.rst  robotstatuschecker-4.1.1.rst
test/: .gitignore  MyLib.py  README.rst  log_message.robot  run.py  run_tests.py  status_and_message.robot  test.sh  tests.robot  tests.txt
